<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".Fragments.InvoiceFragment">


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_invoice"
        android:layout_width="340dp"
        android:layout_height="161dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_select_project"></android.support.v7.widget.RecyclerView>

    <Button
        android:id="@+id/button_send_invoice"
        android:layout_width="340dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_button"
        android:text="SUBMIT"
        android:textColor="@color/tw__composer_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_calculate_inv" />

    <Button
        android:id="@+id/button_cancel_invoice"
        android:layout_width="340dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_button"
        android:text="CANCEL"
        android:textColor="@color/tw__composer_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_send_invoice" />

    <TextView
        android:id="@+id/text_view_select_project"
        android:layout_width="340dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:text="Select Project"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_clock_inv" />

    <EditText
        android:id="@+id/edit_text_hrs_inv"
        android:layout_width="110dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="left|center"
        android:hint="Hours"
        android:inputType="numberSigned|numberDecimal"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/recycler_view_invoice"
        app:layout_constraintTop_toBottomOf="@+id/recycler_view_invoice" />

    <EditText
        android:id="@+id/edit_text_rate_inv"
        android:layout_width="110dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Rate"
        android:inputType="numberSigned|numberDecimal"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/edit_text_hrs_inv"
        app:layout_constraintTop_toBottomOf="@+id/recycler_view_invoice" />

    <Button
        android:id="@+id/button_calculate_inv"
        android:layout_width="340dp"
        android:layout_height="35dp"

        android:layout_marginTop="8dp"
        android:background="@drawable/round_button"
        android:text="CALCULATE"
        android:textColor="@color/tw__composer_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_inv_comments" />

    <TextView
        android:id="@+id/text_view_total"
        android:layout_width="104dp"
        android:layout_height="34dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape"
        android:gravity="left|center"
        android:text="Total"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/text_view_tax"
        app:layout_constraintTop_toBottomOf="@+id/text_view_tax" />

    <TextView
        android:id="@+id/text_view_tax"
        android:layout_width="104dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@20%"
        android:textAlignment="viewStart"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/recycler_view_invoice"
        app:layout_constraintTop_toBottomOf="@+id/recycler_view_invoice" />

    <TextClock
        android:id="@+id/text_clock_inv"
        android:layout_width="340dp"
        android:layout_height="63dp"
        android:layout_margin="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@color/tw__composer_blue_text"
        android:format12Hour="hh:mm:ss a"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/tw__composer_spacing_small"
        android:textAlignment="center"
        android:textColor="@color/tw__composer_white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/text_view_select_project"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Time" />

    <ImageView
        android:id="@+id/image_view_inv"
        android:layout_width="104dp"
        android:layout_height="34dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape"
        android:src="@drawable/baseline_attachment_black_24dp"
        app:layout_constraintEnd_toEndOf="@+id/text_view_total"
        app:layout_constraintTop_toBottomOf="@+id/text_view_total" />

    <EditText
        android:id="@+id/edit_text_inv_comments"
        android:layout_width="340dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape"
        android:ems="10"
        android:hint="Comments"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/image_view_inv"
        app:layout_constraintTop_toBottomOf="@+id/image_view_inv"
        tools:text="Comments" />

</android.support.constraint.ConstraintLayout>