<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".timesheet.TimeSheetBuilder"
    tools:layout_editor_absoluteY="25dp">

    <Button
        android:id="@+id/button_done_ts"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_button"
        android:text="DONE"
        android:textColor="@color/tw__composer_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_view_ts_builder" />

    <Button
        android:id="@+id/button_cancel_ts"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_button"
        android:text="CANCEL"

        android:textColor="@color/tw__composer_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_done_ts" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_ts_builder"
        android:layout_width="320dp"
        android:layout_height="232dp"
        android:layout_marginTop="8dp"
        android:background="@color/common_google_signin_btn_text_dark_pressed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_absent" />

    <Spinner
        android:id="@+id/spinner_hours"
        android:layout_width="104dp"
        android:layout_height="38dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:dropDownHeight="10dp"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/recycler_view_ts_builder"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="317dp"
        android:layout_height="185dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/timesheet" />

    <Button
        android:id="@+id/button_absent"
        android:layout_width="122dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_button"
        android:text="ABSENT"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="751dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp"></FrameLayout>

</android.support.constraint.ConstraintLayout>